# pico-ads1115

./: .gitignore  LICENSE  README.md
examples/hello_ads1115/: CMakeLists.txt  hello_ads1115.c
lib/: CMakeLists.txt  ads1115.c
lib/include/: ads1115.h  registers.h
